--- a/src/app/users-list/users-list.component.html
+++ b/src/app/users-list/users-list.component.html
@@ -3,7 +3,7 @@
 <div class="container-fluid">
     <div class="row">
         <div class="col-xl-12">
-            <button class="btn btn-primary float-end">Create New</button>
+            <button class="btn btn-primary float-end" routerLink="/create">Create New</button>
         </div>
         <div class="col-xl-12 mt-5">
             <table class="table table-striped">
@@ -18,20 +18,12 @@
                     </tr>
                 </thead>
                 <tbody>
-                    <tr>
-                        <td>1</td>
-                        <td></td>
-                        <td></td>
-                        <td></td>
-                        <td></td>
-                        <td></td>
-                    </tr>
-                    <tr>
-                        <td>2</td>
-                        <td></td>
-                        <td></td>
-                        <td></td>
-                        <td></td>
+                    <tr *ngFor="let item of userlist, let i = index;">
+                        <td>{{i+1}}</td>
+                        <td>{{item.firstName}}  {{item.lastName}}</td>
+                        <td>{{item.email}}</td>
+                        <td>{{item.contact}}</td>
+                        <td>{{item.skill}}</td>
                         <td></td>
                     </tr>
                 </tbody>
