--- a/src/app/users-list/users-list.component.html
+++ b/src/app/users-list/users-list.component.html
@@ -20,7 +20,7 @@
                 <tbody>
                     <tr *ngFor="let item of userlist, let i = index;">
                         <td>{{i+1}}</td>
-                        <td>{{item.firstName}}  {{item.lastName}}</td>
+                        <td>{{item.firstname}}  {{item.lastname}}</td>
                         <td>{{item.email}}</td>
                         <td>{{item.contact}}</td>
                         <td>{{item.skill}}</td>
