actualizar usuario, servicio, formulario, parametro de la url activo

--- a/src/app/users-update/users-update.component.html
+++ b/src/app/users-update/users-update.component.html
@@ -1,1 +1,50 @@
-<p>users-update works!</p>
+<div class="containet-fluid" style="height: 100vh;">
+    <div class="row p-3">
+        <div class="col-xl-12 p-3">
+            <div class="card w-50 mx-auto">
+                <div class="card-header">
+                    <h4>Update User</h4>
+                </div>
+                <div class="card-body">
+                    
+                    <form [formGroup]="updateUserForm">
+                        <div class="row">
+                            <div class="col-xl-6">
+                                <label for="" class="form-label">First Name</label>
+                                <input type="text" class="form-control" formControlName="firstname">
+                            </div>
+                            <div class="col-xl-6">
+                                <label for="" class="form-label">Last Name</label>
+                                <input type="text" class="form-control" formControlName="lastname">
+                            </div>
+                            <div class="col-xl-6">
+                                <label for="" class="form-label">E-mail</label>
+                                <input type="text" class="form-control" formControlName="email">
+                            </div>
+                            <div class="col-xl-6">
+                                <label for="" class="form-label">Contact</label>
+                                <input type="text" class="form-control" formControlName="contact">
+                            </div>
+                            <div class="col-xl-6">
+                                <label for="" class="form-label">Age</label>
+                                <input type="text" class="form-control" formControlName="age">
+                            </div>
+                            <div class="col-xl-6">
+                                <label for="" class="form-label">Gender</label>
+                                <input type="text" class="form-control" formControlName="gender">
+                            </div>
+                            <div class="col-xl-6">
+                                <label for="" class="form-label">Skill</label>
+                                <input type="text" class="form-control" formControlName="skill">
+                            </div>
+                        </div>
+                    </form>
+                    
+                </div>
+                <div class="card-footer">
+                    <button class="btn btn-success float-end" (click)="sumbit()">Register</button>
+                </div>
+            </div>
+        </div>
+    </div>    
+</div>
