--- a/src/app/users-update/users-update.component.html
+++ b/src/app/users-update/users-update.component.html
@@ -42,7 +42,7 @@
                     
                 </div>
                 <div class="card-footer">
-                    <button class="btn btn-success float-end" (click)="sumbit()">Register</button>
+                    <button class="btn btn-success float-end" (click)="sumbit()">Update</button>
                 </div>
             </div>
         </div>
